ci corepack enable

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,7 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-
       - run: corepack enable
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -35,7 +33,6 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm i
-
       - name: Build
         run: pnpm build
 
@@ -54,15 +51,16 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+      - run: corepack enable
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "pnpm"
           cache-dependency-path: pnpm-lock.yaml
           registry-url: "https://npm.pkg.github.com"
+
       - name: Install Dependencies
         run: pnpm i
-
       - name: Build
         run: pnpm build
 
